--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quoterapp",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -17,5 +18,8 @@
     "url": "https://github.com/sergiogabC/quoterApp/issues"
   },
   "homepage": "https://github.com/sergiogabC/quoterApp#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
