--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch app.js"
+    "start": "node --watch app.js",
+    "tailwind": "npx @tailwindcss/cli -i ./view/css/input.css -o ./view/css/output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,6 @@
     "@tailwindcss/cli": "^4.1.10",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "tailwindcss": "^4.1.10",
     "zod": "^3.25.63"
   }
 }
